# actix-web-static-files

./: Cargo.toml  README.md
examples/: basic_use.rs
src/: fs_macro.rs  impl.rs  lib.rs
