[package]
authors = ["Alexander Korolev <kilork@yandex.ru>", "David Johnson <john01dav@gmail.com>"]
categories = ["network-programming",
              "asynchronous",
              "web-programming::http-server"]
description = """
actix-web static files as resources support.
"""
edition = "2018"
homepage = "https://github.com/kilork/actix-web-static-files"
keywords = ["actix", "http", "web", "static"]
license = "Unlicense OR MIT"
name = "actix-web-static-files"
readme = "README.md"
repository = "https://github.com/kilork/actix-web-static-files"
version = "3.0.5"

[features]
default = []

[dependencies]
actix-web = { version = "3.0", default-features = false }
actix-service = { version = "1.0.6", default-features = false }
change-detection = { version = "1.1", optional = true }
derive_more = "0.99.5"
futures = { version = "0.3", default-features = false }
mime_guess = "2.0"
path-slash = "0.1"
include_dir = "0.6.0"
md5 = "0.7.0"

[build-dependencies]
actix-web = { version = "3.0", default-features = false }
actix-service = { version = "1.0.6", default-features = false }
change-detection = { version = "1.1", optional = true }
derive_more = "0.99.5"
futures = { version = "0.3", default-features = false }
mime_guess = "2.0"
path-slash = "0.1"
